--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="four">
         <div class="text-box">
           <p class="hbd-chatbox">
-            Happy birthday to you!! Yeee! Many many happy blah blah...
+            Happy birthday to you!! Wish you long life and good health always..
           </p>
           <p class="fake-btn">Send</p>
         </div>
@@ -61,7 +61,7 @@
         <img src="img/hat.svg" alt="" class="hat" />
         <div class="wish">
           <h3 class="wish-hbd">Happy Birthday!</h3>
-          <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+          <h5 id="wishText">I will always loving you! ;)</h5>
         </div>
       </div>
       <div class="seven">
